--- a/style.css
+++ b/style.css
@@ -11,3 +11,19 @@
     border: 1px solid black;
 }
 
+#dino{
+    width: 50px;
+    height: 50px;
+    background-color: red;
+    position: relative;
+    top: 150px;
+}
+
+#cactus{
+    width: 50px;
+    height: 50px;
+    background-color: blue;
+    position: relative;
+    top: 150px; 
+    left: 397px;
+}
