--- a/style.css
+++ b/style.css
@@ -17,11 +17,19 @@
     background-color: red;
     position: relative;
     top: 150px;
+    animation: jump 500ms infinite;
+}
+
+@keyframes jump {
+    0%{top: 150px;}
+    30%{top: 100px;}
+    70%{top: 100px;}
+    100%{top: 150px;}
 }
 
 #cactus{
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     background-color: blue;
     position: relative;
     top: 150px; 
