--- a/style.css
+++ b/style.css
@@ -4,43 +4,45 @@
 }
 
 .game{
-    width: 500px;
+    width: 600px;
     height: 200px;
-    margin-left: 10px;
-    margin-top: 10px;
+    margin: auto;
     border: 1px solid black;
 }
 
 #dino{
     width: 50px;
     height: 50px;
-    background-color: red;
+    background-image: url(Images/noun-pixel-dino-3907595.png);
+    background-size: 50px 50px;
     position: relative;
-    top: 150px;
+    top: 158px;
 }
 
-.animate{
-    animation: jump 500ms;
+.jump{
+    animation: jump 0.3s linear;
 }
 
 @keyframes jump {
     0%{top: 150px;}
-    30%{top: 100px;}
-    70%{top: 100px;}
+    25%{top: 130px;}
+    50%{top: 100px;}
+    75%{top: 130px;}
     100%{top: 150px;}
 }
 
 #cactus{
-    width: 30px;
-    height: 30px;
-    background-color: blue;
+    width: 40px;
+    height: 40px;
     position: relative;
-    top: 150px; 
-    left: 397px;
-    animation: cactus 1s infinite linear; duration timing-function delay iteration-count direction fill-mode;
+    background-image: url(Images/noun-cactus-102715.png);
+    background-size: 40px 40px;
+    top: 117px; 
+    left: 565px;
+    animation: block 1s infinite linear;
 }
 
-@keyframes cactus{
-    0%{left: 397px;}
-    100%{left: -40px;}
+@keyframes block{
+    0%{left: 565px;}
+    100%{left: -20px;}
 }
